@@ -6,6 +6,9 @@ git-annex (4.20131102) UNRELEASED; urgency=low
     with no master branch.
   * gcrypt, bup: Fix bug that prevented using these special remotes
     with encryption=pubkey.
+  * Fix enabling of gcrypt repository accessed over ssh;
+    git-annex-shell gcryptsetup had a bug that caused it to fail
+    with permission denied.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 02 Nov 2013 14:54:36 -0400
 
